deploy/k8s/discovery/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-service
spec:
  ports:
  - port: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: sandbox
