deploy/k8s/discovery/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo-service
spec:
  type: ClusterIP
  ports:
    - port: 27017
  selector:
    app: mongo
