deploy/k8s/discovery/rabbit-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq-service
spec:
  ports:
  - port: 5672
    protocol: TCP
  type: LoadBalancer
  selector:
    app: taskQueue
    component: rabbitmq
